<resources>
    <string name="app_name">Simple Chat</string>
    <string name="send">Send</string>
    <string name="message_hint">Message...</string>
    <string name="select_a_chat_to_start_messaging">Select a chat to start messaging</string>
    <string name="debug">Debug</string>
    <string name="show_log_in">Show Log In</string>
    <string name="show_sign_up">Show Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_hint">Username...</string>
    <string name="password_hint">Password...</string>
</resources>
