<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatListActivity">

    <RelativeLayout
        android:id="@+id/no_chat_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/select_a_chat_to_start_messaging" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chat_layout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/messagesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/send_layout"
            android:layout_alignParentTop="true"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

        <RelativeLayout
            android:id="@+id/send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="6dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="6dp">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sendMessageButton"
                android:layout_toLeftOf="@+id/sendMessageButton"
                android:layout_toStartOf="@+id/sendMessageButton"
                android:gravity="top"
                android:hint="@string/message_hint"
                android:imeOptions="actionSend"
                android:inputType="textShortMessage" />

            <Button
                android:id="@+id/sendMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/send"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
